crates/lyra-tests/tests/snapshots/corpus__regression__cross_file_resolve.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: sub.sv (0 diagnostics)
// file: top.sv (0 diagnostics)
---
unit (0 diagnostics)
