crates/lyra-tests/tests/snapshots/corpus__regression__default_nettype_none_port_connection.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.semantic.implicit_net_forbidden] 5:11..5:11: implicit net creation disabled by `default_nettype none` for `w`
---
unit (0 diagnostics)
