crates/lyra-tests/tests/snapshots/corpus__regression__default_nettype_none_port_expr_decl.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.semantic.implicit_net_forbidden] 3:11..3:11: implicit net creation disabled by `default_nettype none` for `a`
---
unit (0 diagnostics)
