crates/lyra-tests/tests/snapshots/corpus__regression__duplicate_def.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.semantic.duplicate_definition] 2:8..2:8: duplicate definition of `x`
---
unit (0 diagnostics)
