crates/lyra-tests/tests/snapshots/corpus__regression__duplicate_def_cross_type.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: a.sv (0 diagnostics)
// file: b.sv (0 diagnostics)
---
unit (1 diagnostic)
  error[lyra.semantic.duplicate_definition] b.sv 1:10..1:10: duplicate definition `foo`
