crates/lyra-tests/tests/snapshots/corpus__regression__param_override_unresolved_not_implicit_net.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.semantic.unresolved_name] 5:11..5:11: unresolved name `UNDEF`
---
unit (0 diagnostics)
