crates/lyra-tests/tests/snapshots/corpus__regression__undeclared_type.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (2 diagnostics)
  error[lyra.type.undeclared_type] 0:9..0:9: undeclared type `unknown_t`
  error[lyra.type.not_a_type] 0:34..0:34: `my_var` is not a type
---
unit (0 diagnostics)
