crates/lyra-tests/tests/snapshots/corpus__regression__unresolved_name.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (2 diagnostics)
  error[lyra.semantic.unresolved_name] 1:8..1:8: unresolved name `y`
  error[lyra.semantic.unresolved_name] 1:12..1:12: unresolved name `x`
---
unit (0 diagnostics)
